  dragon scales and dragon scale mail, which makes their midgame very difficult.
  Their quest artifact is Sharur, a talking ornate mace.

New Dungeon Features
- Buzzsaw Trap
- Furnaces

New Artifacts
- Gungnir
- Gleipnir
- Gae Bulg
- Gae Dearg
- Gae Buidhe
- Carnwennan
- Seafoam
- Luckless Folly
- Dismounter
- Final Death
- Unlimited Moon
- Reaper
- War's Sword
- Sharur (Dragonmaster quest artifact)
- The Holographic Void Lily (Cartomancer quest artifact)
- Vladsbane (joke artifact, must be wished for)
- The King in Yellow (summons an optional boss)

Dungeon Generation
- Statuary level: A level with many statues and statue traps. One statue
  contains a wand of wonder.
- The Void: A dangerous one level branch with a very large amount of loot, but
  filled with a number of extremely annoying void-themed monsters and a single
  void dragon.
- Beast den: A special room which contains a number of wild animals.
- Archery Shops: Sell arrows and bows.
- Junk Shops: Function as a general store, but a large selection of what they
  sell is useless.
- Underground Rivers: Paxed's underground rivers patch has been implemented.
- Mephisto's Lair
- The Lord of the Foocubi's Lair

New Monster Spells
- Sonic Scream
- Gas Cloud
- Slime Spray

New Items
- Bone Knife
- Throwing Axe
- Razor Whip
- Grain Scythe
- Earmuff (pluralization to "Earmuffs" is currently WIP)
- Flowing Dress
- Snappy Tuxedo
- Iron Mantle
- Cloak of Flight
- Cloak of Reflection
- Tower Shield
- Hide Shield
- Rogues Gloves
- Boxing Gloves
- Amulet of Drain Resistance
- Amulet of Nausea
- Amulet of Danger
- Mask
- Playing card deck
- Deck of fate
- Pinch of Catnip
- Potion of Reflection
- Scroll of Cloning
- Scroll of Pure Law
- Scroll of True Neutrality
- Scroll of Raw Chaos
- Wand of Wonder
- Wand of Acid
- Wand of Poison Gas
- Bony Quill
- Ooze Dragon Scale Mail
- Razor Dragon Scale Mail
- Filth Dragon Scale Mail
- Hex Dragon Scale Mail
- Void Dragon Scales
- Ooze Dragon Scales
- Razor Dragon Scales