@@ -168,6 +168,8 @@ New Artifacts
 - Unlimited Moon
 - Reaper
 - War's Sword
+- Acidfall
+- Sunspot
 - Sharur (Dragonmaster quest artifact)
 - The Holographic Void Lily (Cartomancer quest artifact)
 - Vladsbane (joke artifact, must be wished for)
@@ -183,7 +185,6 @@ Dungeon Generation
 - Archery Shops: Sell arrows and bows.
 - Junk Shops: Function as a general store, but a large selection of what they
   sell is useless.
-- Underground Rivers: Paxed's underground rivers patch has been implemented.
 - Mephisto's Lair
 - The Lord of the Foocubi's Lair
 
